Fixed scrollbar issue

--- a/less/main.less
+++ b/less/main.less
@@ -12,6 +12,7 @@
 @import "post";
 
 body {
+    overflow-y: scroll;
     margin: 80px 20px 20px 20px;
     text-align: center;
     color: @color3;
